--- a/src/styles/generic.scss
+++ b/src/styles/generic.scss
@@ -4,4 +4,13 @@
 
 body {
     margin: 0;
+    height: 100vh;
+    width: 100vw;
+}
+
+.container {
+    width: 1200px;
+    overflow-x: scroll;
+    margin: 0 auto;
+    box-shadow: 0px 0px 34px 0px rgba(0, 0, 0, 0.33);
 }
